# Autonomous-robotics

./: LICENSE  README.md
wb4/: kill_all.sh  start_waiterbot.sh
wb4/src/restaurant_robot/: CMakeLists.txt  package.xml
wb4/src/restaurant_robot/config/: nav2_params.yaml
wb4/src/restaurant_robot/launch/: restaurant_navigation.launch.py
wb4/src/restaurant_robot/maps/: restaurant_map.pgm  restaurant_map.yaml
wb4/src/restaurant_robot/rviz/: restaurant_nav.rviz
wb4/src/restaurant_robot/scripts/: waiterbot_tour.py
wb4/src/restaurant_robot/urdf/: waiter_robot.urdf.xacro
wb4/src/restaurant_robot/worlds/: restaurant.world
