<?xml version="1.0"?>
<package format="3">
  <name>restaurant_robot</name>
  <version>1.0.0</version>
  <description>WaiterBot - ROS 2 Humble + Gazebo Classic</description>
  <maintainer email="student@fra-uas.de">Jakia Sultana</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>xacro</depend>
  <depend>gazebo_ros</depend>
  <depend>nav2_bringup</depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>nav2_simple_commander</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
